tests/ui/conditional-compilation/cfg-attr-invalid-predicate.stderr
error[E0537]: invalid predicate `foo`
  --> $DIR/cfg-attr-invalid-predicate.rs:1:7
   |
LL | #[cfg(foo(bar))]
   |       ^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0537`.
